<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ReadPeer</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to use ReadPeer!</string>
    <string name="import_book">Import Book</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_recorder">RecorderActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_annotation">AnnotationActivity</string>
    <string name="title_activity_book_shelf">BookShelfActivity</string>
    <string name="title_activity_read_book">ReadBookActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="start_read">Read a book</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="remember_password">Remember Password</string>
    <string name="log_in_automatically">Log In Automatically</string>
    <string name="trial">Trial</string>
    <string name="password_hint">Please Enter Password</string>
    <string name="username_hint">Please Enter Username</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="annotation_title">Annotating</string>
    <string name="annotation_hint">Write your thoughts about the text you annotated</string>
    <string name="desc">Image for button</string>
    <string name="title_read_book">Read Book</string>
    <string name="title_annotation">Annotating</string>
    <string name="title_bookshelf">My Books</string>
    <string name="confirm">Yes</string>
    <string name="quit_confirmation">Are you sure to quit?</string>
    <string name="take_photo">Take</string>
    <string name="btn_record">Press to record</string>
    <string name=" btn_stopRecord">Stop Recording</string>
    <string name="hint_register_username">Username</string>
    <string name="hint_register_password">Password (6 or more characters)</string>
    <string name="hint_register_email">Email address</string>
    <string name="submit">Submit</string>
    <string name="register">Not a member? <u>Join now >></u></string>
    <string name="intent_extra_returned_content">returned_content</string>
    <string name="show_annotation">Show Annotations</string>
    <string name="show_annotation_popular">Popular Annotations</string>
    <string name="annotation_previous">last</string>
    <string name="annotation_next">next</string>
    <string name="title_myBook">My Books</string>
    <string name="title_allBook">Book Store</string>
    <string name="title_font_dialog">Font Customize</string>
    <string name="annotation_close">Close</string>
    <string name="change_font">Font Size</string>
    <string name="text_jump">Jump to</string>
    <string name="search_text">Search</string>
    <string name="my_account">Account</string>
    <string name="content_description">Image</string>
    <string name="signUp">Join Now</string>
</resources>