<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_annotate"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".RegisterActivity" >
    <View
        android:layout_width="fill_parent"
        android:layout_height="50dp" >
    </View>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.45"
        android:background="#CCFFFFFF"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="30dp" >
        <ImageView
            android:id="@+id/readpeer_branding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/readpeer_branding" />
        <EditText
            android:id="@+id/register_name"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backwithborder"
            android:ems="10"
            android:hint="@string/hint_register_username"
            android:paddingLeft="5dp"
            android:textSize="12sp" >
            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backwithborder"
            android:ems="10"
            android:hint="@string/hint_register_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backwithborder"
            android:ems="10"
            android:hint="@string/hint_register_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="12sp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_green_radius"
            android:padding="10dp"
            android:text="@string/signUp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" >
    </View>
</LinearLayout>