<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFCC"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnnotationActivity" >
    <EditText
        android:id="@+id/annotation_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="none"
        android:maxLines="5" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80FFFFCC"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/annotation_comment_textview"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white"
            android:ems="10"
            android:gravity="left|top"
            android:hint="@string/annotation_hint" />
        <LinearLayout
            android:id="@+id/annotation_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" >
            <ImageButton
                android:id="@+id/btn_sound"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/icon_sound" />
            <ImageButton
                android:id="@+id/btn_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/icon_image" />
            <ImageButton
                android:id="@+id/btn_link"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/icon_link" />
            <ImageButton
                android:id="@+id/btn_video"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/icon_film" />
            <View
                android:id="@+id/spaceHolder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
        <ImageView
            android:id="@+id/photoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/avatar"
            android:visibility="invisible" />
        <ImageView
            android:id="@+id/image_play_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc"
            android:src="@drawable/icon_video"
            android:visibility="invisible" />
        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/desc"
            android:src="@drawable/icon_play"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>